--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -492,6 +492,10 @@ h4{
 /* --------------------------- */
 /* -----CONTACT FORM ----- */
 /* --------------------------- */
+form {
+  padding-left: 400px;
+  padding-right: 400px;
+}
 
 input[type=text], select, textarea{
   width: 100%;
