--- a/resources/CSS/queries.css
+++ b/resources/CSS/queries.css
@@ -106,10 +106,10 @@
         font-size: 12float: 
     } 
      
-    .column{ width:44%; display: block;}
+    .column{ width:42%; display: block;}
     
     .works-step { margin-bottom: 30px;  }
-    .works-step:last-of-type { margin-bottom: 30px; }
+    .works-step:last-of-type { margin-bottom: 30px; padding-left:10px; }
     
      
     .pizza__content{ flex-direction: column;}
