--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -644,7 +644,6 @@ button:hover {
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -678,6 +677,7 @@ button:hover {
 
 /* The Close Button (x) */
 .close {
+  padding-top:35px;
   position: absolute;
   right: 35px;
   top: 15px;
