--- a/resources/CSS/queries.css
+++ b/resources/CSS/queries.css
@@ -98,6 +98,7 @@
     .app-screen { width: 45%; }
     .steps-box:first-child { text-align: center; }
     
+    .modal-content { width:1000px; max-width:100%;}
     .works-step div {
         height: 40px;
         width: 40px;
