--- a/resources/CSS/queries.css
+++ b/resources/CSS/queries.css
@@ -113,15 +113,14 @@
     
     .modal-content { width:1000px; max-width:100%;}
      
-    .pizza__img { height: 60vh; }
-    .flexbox{ flex-direction: column; flex-wrap: wrap;}
+    .pizza__img { height: 55vh; }
+    .flexbox{ flex-direction: column; }
     .pizza__content{ flex-direction: column; flex-basis: 25px;}
     .pizza__title { flex-direction: column;float: left;}
     .pizza__hero { flex-direction: column; float: left;}
     .pizza__details {flex-direction: column;}
-    .pizza__description {flex-direction: column; padding-right: 12px;}
+    .pizza__description {flex-direction: column; padding-right: 10px;}
     .pizza__heading { flex-direction: column; padding-right: 12px;}
-    .pizza__price {flex-direction:column; flex:1; font-size: 10px;}
 }
 
 /* Small phones: from 0 to 480px */
