--- a/resources/CSS/queries.css
+++ b/resources/CSS/queries.css
@@ -117,10 +117,11 @@
     .flexbox{ flex-direction: column; }
     .pizza__content{ flex-direction: column; flex-basis: 25px;}
     .pizza__title { flex-direction: column;float: left;}
-    .pizza__hero { flex-direction: column; float: left;}
+    .pizza__hero { flex-direction: column; }
     .pizza__details {flex-direction: column;}
-    .pizza__description {flex-direction: column; padding-right: 10px;}
+    .pizza__description {flex-direction: column; padding-right: 8px;}
     .pizza__heading { flex-direction: column; padding-right: 12px;}
+    .emoji { padding-right:5px;
 }
 
 /* Small phones: from 0 to 480px */
