--- a/resources/CSS/queries.css
+++ b/resources/CSS/queries.css
@@ -116,12 +116,12 @@
     .pizza__img { height: 55vh; }
     .flexbox{ flex-direction: column; }
     .pizza__content{ flex-direction: column; flex-basis: 25px;}
-    .pizza__title { flex-direction: column;float: left;}
+    .pizza__title { flex-direction: column; padding-right:16px;}
     .pizza__hero { flex-direction: column; }
     .pizza__details {flex-direction: column;}
     .pizza__description {flex-direction: column; padding-right: 8px;}
     .pizza__heading { flex-direction: column; padding-right: 12px;}
-    .emoji { padding-right:5px;
+    .emoji { padding-right:5px; }
 }
 
 /* Small phones: from 0 to 480px */
