--- a/resources/CSS/queries.css
+++ b/resources/CSS/queries.css
@@ -113,15 +113,17 @@
     
     .modal-content { width:1000px; max-width:100%;}
      
-    .pizza__img { height: 30vh; }
+    .pizza__img { height: 55vh; }
     .flexbox{ flex-direction: column; }
-    .pizza__content{ flex-direction: column; flex-basis: 25px;}
+    .pizza__content{ flex-direction: column; flex-basis: 20px;}
     .pizza__title { flex-direction: column;}
-    .pizza__hero { flex-direction: column; }
+    .pizza__hero { flex-direction: column; flex-basis:150px;}
     .pizza__details {flex-direction: column;}
     .pizza__description {flex-direction: column; padding-right: 9px;}
     .pizza__heading { flex-direction: column; padding-right: 12px;}
     .emoji { padding-right:5px; }
+    .pizza__price {flex-basis: 30px; }
+    
 }
 
 /* Small phones: from 0 to 480px */
