--- a/resources/CSS/queries.css
+++ b/resources/CSS/queries.css
@@ -113,11 +113,12 @@
     
     .modal-content { width:1000px; max-width:100%;}
      
+    .pizza { width:150%;}
     .pizza__img { height: 55vh; }
     .flexbox{ flex-direction: column; }
     .pizza__content{ flex-direction: column; flex-basis: 25px;}
     .pizza__title { flex-direction: column;}
-    .pizza__hero { flex-direction: column; flex-basis:200px;}
+    .pizza__hero { flex-direction: column; flex-basis:300px;}
     .pizza__details {flex-direction: column;}
     .pizza__description {flex-direction: column; padding-right: 9px;}
     .pizza__heading { flex-direction: column; padding-right: 12px;}
