--- a/resources/CSS/queries.css
+++ b/resources/CSS/queries.css
@@ -113,16 +113,9 @@
     
     .modal-content { width:1000px; max-width:100%;}
      
-    .pizza__img { height: 55vh; }
-    .flexbox{ flex-direction: column; }
-    .pizza__content{ flex-direction: column; flex-basis: 35px;}
-    .pizza__title { flex-direction: column;}
-    .pizza__hero { flex-direction: column; flex-basis:140px;}
-    .pizza__details {flex-direction: column;}
-    .pizza__description {flex-direction: column; padding-right: 12px;}
-    .pizza__heading { flex-direction: column; padding-right: 12px;}
-    .emoji { padding-right:5px; }
-    
+    .pizza { flex-wrap: wrap; }
+    .pizza__hero { flex-basis: 100%;}
+    .pizza__price { writing-mode: horizontal-tb; flex:1;}
 }
 
 /* Small phones: from 0 to 480px */
