--- a/resources/CSS/queries.css
+++ b/resources/CSS/queries.css
@@ -116,8 +116,8 @@
     .pizza { flex-wrap: wrap; }
     .pizza__hero { flex-basis: 100%;}
     .pizza__price { writing-mode: horizontal-tb; flex:1; background: linear-gradient(to right, #67b26f, #4ca2cd);}
-    .pizza__detail { padding-right: 10px;}
-    .emoji { padding-right: 5px;}
+    .pizza__tag { padding-right: 10px;}
+    .pizza__details { flex-direction: column;}
 }
 
 /* Small phones: from 0 to 480px */
