--- a/resources/CSS/queries.css
+++ b/resources/CSS/queries.css
@@ -115,9 +115,8 @@
      
     .pizza { flex-wrap: wrap; }
     .pizza__hero { flex-basis: 100%;}
-    .pizza__price { writing-mode: horizontal-tb; flex:1; background: linear-gradient(to right, #67b26f, #4ca2cd);}
-    .pizza__tag { padding-right: 10px;}
     .pizza__details { flex-direction: column;}
+    .pizza__title { flex-direction: column;}
 }
 
 /* Small phones: from 0 to 480px */
